0.635
 Feature: Added support for "emotes" (chat symbols). New permission (UseEmotes) and config key (IRCAllowEmotes) were added.
 Fix: Fixed ParseMiniTimespan/TryParseMiniTimespan accepting numbers as valid time spans.
 Fix: Fixed PlayerDB not saving strings with newlines properly.
 Fix: Fixed fCraft not building in DEBUG_IRC configuration.
 Fix: Fixed IRC bot sometimes producing messages that are a couple characters over the IRC message size limit (512 chars).
 Change: Symbolic color codes (e.g. %S) can now be used in chat.
 Change: Backslash can now be used to escape percent color codes (e.g. \%C).
 Change: Server.StartServer will now retry looking up the external IP up to 3 times.
 Change: Lots of documentation, annotation, and API improvements.

0.634
 Fix: Fixed an occasional InvalidOperationException when auto-updating in ServerGUI.
 Fix: Fixed ConfigGUI showing misleading information in "unrecognized entry ignore" errors.
 Fix: Fixed Logger trying to write to file in MapConverter and MapRenderer.
 Fix: Fixed MapRenderer and MapConverter spamming zone-related errors (thanks Hellenion and AndrewPH)
 Fix: Fixed /UndoPlayerNot help entry (thanks ruggedbear)
 Change: Heartbeat code now uses HTTPS, as mandated by Mojang. If you use Mono, see http://www.mono-project.com/FAQ:_Security
 Change: Removed support for the malfunctioning WoM Direct heartbeat service.
 Change: RankChangeReason is now shown as a "Rank note" in /Info, even if no other data (PreviousRank/RankChangedBy/RankChangeDate) exists (thanks Wundsalz) 

0.633
 Feature: Added checkbox for HeartbeatEnabled config key to ConfigGUI, on the advanced tab.
 Fix: Fixed heartbeat/verification issues caused by "no-www" changes made by Mojang at minecraft.net
 Fix: Fixed VisualStudio designer being unable to load ConfigGUI.MainForm.
 Fix: Fixed /ZMark being spammy (thanks ruggedbear).
 Fix: Binding "air" block to something now works as expected (deleted blocks are replaced with the binding) (thanks Hellenion).