@@ -715,7 +715,9 @@ namespace fCraft {
 
             // Announce join
             if( ConfigKey.ShowConnectionMessages.Enabled() ) {
+                // ReSharper disable AssignNullToNotNullAttribute
                 string message = Server.MakePlayerConnectedMessage( this, firstTime, World );
+                // ReSharper restore AssignNullToNotNullAttribute
                 canSee.Message( message );
             }
 
